--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,8 +80,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     //------------------------------------------------------------------------------------------------------------------
 
-    //RxPermission------------------------------------------------------------------------------------------------------
-    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    //Kotlin Coroutines Permission--------------------------------------------------------------------------------------
+    implementation 'com.github.florent37:runtime-permission:1.1.0'
     //------------------------------------------------------------------------------------------------------------------
 
     //Google Maps Utils-------------------------------------------------------------------------------------------------
@@ -95,6 +95,10 @@ dependencies {
 
     //Lottie------------------------------------------------------------------------------------------------------------
     implementation 'com.airbnb.android:lottie:2.8.0'
+    //------------------------------------------------------------------------------------------------------------------
+
+    //Kotlin Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
     //------------------------------------------------------------------------------------------------------------------
 
 }
