--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,16 +63,10 @@ dependencies {
     kapt 'com.google.dagger:dagger-compiler:2.20'
     //------------------------------------------------------------------------------------------------------------------
 
-    //RxJava -----------------------------------------------------------------------------------------------------------
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.4'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
-    //------------------------------------------------------------------------------------------------------------------
-
     //Retrofit ---------------------------------------------------------------------------------------------------------
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
     //------------------------------------------------------------------------------------------------------------------
 
     //OkHttp------------------------------------------------------------------------------------------------------------
