--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'androidx.navigation.safeargs'
 
 apply from: 'variables.gradle'
 
@@ -25,6 +26,73 @@ android {
     dataBinding {
         enabled true
     }
+}
+
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+dependencies {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.1.0-alpha02"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+    //Navigation Components---------------------------------------------------------------------------------------------
+    implementation "android.arch.navigation:navigation-fragment-ktx:$navigationVersion"
+    implementation "android.arch.navigation:navigation-ui-ktx:$navigationVersion"
+    //------------------------------------------------------------------------------------------------------------------
+
+    //Dagger------------------------------------------------------------------------------------------------------------
+    implementation 'com.google.dagger:dagger-android-support:2.20'
+    kapt 'com.google.dagger:dagger-compiler:2.20'
+    //------------------------------------------------------------------------------------------------------------------
+
+    //Retrofit----------------------------------------------------------------------------------------------------------
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    //------------------------------------------------------------------------------------------------------------------
+
+    //OkHttp------------------------------------------------------------------------------------------------------------
+    implementation "com.squareup.okhttp3:okhttp:3.12.1"
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
+    //------------------------------------------------------------------------------------------------------------------
+
+    //Kotlin Coroutines Permission--------------------------------------------------------------------------------------
+    implementation 'com.github.florent37:runtime-permission:1.1.0'
+    //------------------------------------------------------------------------------------------------------------------
+
+    //Google Maps Utils-------------------------------------------------------------------------------------------------
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    //------------------------------------------------------------------------------------------------------------------
+
+    //Glide-------------------------------------------------------------------------------------------------------------
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    //------------------------------------------------------------------------------------------------------------------
+
+    //Lottie------------------------------------------------------------------------------------------------------------
+    implementation 'com.airbnb.android:lottie:2.8.0'
+    //------------------------------------------------------------------------------------------------------------------
+
+    //Kotlin Coroutines-------------------------------------------------------------------------------------------------
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+    //------------------------------------------------------------------------------------------------------------------
+
 }
 
 apply from: 'dependencies.gradle'
