--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -21,12 +21,17 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
-    //Dagger -----------------------------------------------------------------------------------------------------------
+    //Navigation Components---------------------------------------------------------------------------------------------
+    implementation "android.arch.navigation:navigation-fragment-ktx:$navigationVersion"
+    implementation "android.arch.navigation:navigation-ui-ktx:$navigationVersion"
+    //------------------------------------------------------------------------------------------------------------------
+
+    //Dagger------------------------------------------------------------------------------------------------------------
     implementation 'com.google.dagger:dagger-android-support:2.20'
     kapt 'com.google.dagger:dagger-compiler:2.20'
     //------------------------------------------------------------------------------------------------------------------
 
-    //Retrofit ---------------------------------------------------------------------------------------------------------
+    //Retrofit----------------------------------------------------------------------------------------------------------
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
