--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ apply from: 'variables.gradle'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.vadim.iqosmap"
+        applicationId "com.vm.iqosmap"
         minSdkVersion 22
         targetSdkVersion 28
         versionCode 1
