--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -65,6 +65,8 @@ dependencies {
 
     //Firebase----------------------------------------------------------------------------------------------------------
     implementation "com.google.firebase:firebase-core:$firebase_version"
+
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
     //------------------------------------------------------------------------------------------------------------------
 
 }
