--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -65,10 +65,9 @@ dependencies {
 
     //Firebase----------------------------------------------------------------------------------------------------------
     implementation "com.google.firebase:firebase-core:$firebase_version"
-
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 
-    compile('com.crashlytics.sdk.android:crashlytics:2.9.9@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.9@aar') {
         transitive = true
     }
     //------------------------------------------------------------------------------------------------------------------
