--- a/app/variables.gradle
+++ b/app/variables.gradle
@@ -1,6 +1,6 @@
 android {
     defaultConfig {
-        buildConfigField 'String', 'BASE_URL', '"http://localhost:8099/"'
+        buildConfigField 'String', 'BASE_URL', '"http://91.235.128.33:8081/"'
         buildConfigField "String", "IQOS_PHONE", '"0800507807"'
         buildConfigField "String", "IQOS_SITE", '"https://www.iqos.com.ua"'
         buildConfigField 'int', 'TIMEOUT_CONNECT', '20000'
