--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         kotlin_version = '1.3.21'
-        navigationVersion = '1.0.0-beta02'
+        navigationVersion = '1.0.0-rc02'
         firebase_version = '16.0.7'
     }
     repositories {
