--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@
 /.idea/misc.xml
 /.idea/dictionaries/
 /app/release/
+/.idea/
+.idea/icon.png
+.idea/icon_dark.png
+app/libs/
+app/src/main/assets/progress/
+app/src/main/res/anim/
+app/src/main/res/mipmap-anydpi-v26/
