--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -7,10 +7,10 @@ allprojects {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha03'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha02"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.1.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0-alpha03"
+    implementation "androidx.lifecycle:lifecycle-viewmodel:2.1.0-alpha03"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
@@ -24,11 +24,6 @@ dependencies {
     //Navigation Components---------------------------------------------------------------------------------------------
     implementation "android.arch.navigation:navigation-fragment-ktx:$navigationVersion"
     implementation "android.arch.navigation:navigation-ui-ktx:$navigationVersion"
-    //------------------------------------------------------------------------------------------------------------------
-
-    //Dagger------------------------------------------------------------------------------------------------------------
-    implementation 'com.google.dagger:dagger-android-support:2.20'
-    kapt 'com.google.dagger:dagger-compiler:2.20'
     //------------------------------------------------------------------------------------------------------------------
 
     //Retrofit----------------------------------------------------------------------------------------------------------
@@ -65,10 +60,14 @@ dependencies {
 
     //Firebase----------------------------------------------------------------------------------------------------------
     implementation "com.google.firebase:firebase-core:$firebase_version"
-    implementation 'com.google.firebase:firebase-config:16.3.0'
+    implementation 'com.google.firebase:firebase-config:16.4.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
     //------------------------------------------------------------------------------------------------------------------
 
+    //Koin--------------------------------------------------------------------------------------------------------------
+    implementation "org.koin:koin-androidx-scope:$koin_version"
+    implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    //------------------------------------------------------------------------------------------------------------------
 }
 
 apply plugin: 'com.google.gms.google-services'
