--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@
 buildscript {
     ext {
         kotlin_version = '1.3.21'
-        navigationVersion = '1.0.0-rc02'
-        firebase_version = '16.0.7'
+        navigationVersion = '1.0.0'
+        firebase_version = '16.0.8'
+        koin_version = '2.0.0-rc-1'
     }
     repositories {
         google()
