--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -7,19 +7,20 @@ allprojects {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta1'
+    implementation 'androidx.appcompat:appcompat:1.1.0-beta01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha01'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta2'
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0-alpha01"
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0-alpha01"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //Navigation Components---------------------------------------------------------------------------------------------
     implementation "android.arch.navigation:navigation-fragment-ktx:$navigationVersion"
@@ -55,13 +56,13 @@ dependencies {
     //------------------------------------------------------------------------------------------------------------------
 
     //Kotlin Coroutines-------------------------------------------------------------------------------------------------
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
     //------------------------------------------------------------------------------------------------------------------
 
     //Firebase----------------------------------------------------------------------------------------------------------
     implementation "com.google.firebase:firebase-core:$firebase_version"
-    implementation 'com.google.firebase:firebase-config:17.0.0'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
+    implementation 'com.google.firebase:firebase-config:18.0.0'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     //------------------------------------------------------------------------------------------------------------------
 
     //Koin--------------------------------------------------------------------------------------------------------------
