--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,10 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.31'
+        kotlin_version = '1.3.41'
         navigationVersion = '1.0.0'
-        firebase_version = '17.0.0'
-        koin_version = '2.0.0-rc-1'
+        firebase_version = '17.0.1'
+        koin_version = '2.0.1'
     }
     repositories {
         google()
@@ -17,10 +17,10 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.0'
         classpath 'io.fabric.tools:gradle:1.29.0'
     }
 }
